--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "it(should be about testing, ...)",
+  "name": "should-be-about-testing",
   "version": "1.0.0",
   "description": "it(should be about testing, ...)",
   "scripts": {
